# Demand-forecasting

./: .gitignore  .replit  pyproject.toml
backend/: README_BIGQUERY.md  call_train_api.py  check_skus.py  check_ui_endpoints.py  probe_endpoints.py  requirements.txt  run_api_tests.py  run_api_tests_inproc.py  run_bq_list_skus.py  simulate_ui_actions.py  test_bigquery.py
backend/app/: __init__.py  data_loader.py  main.py  model.py  schemas.py
backend/app/data/: __init__.py  bigquery_client.py
backend/app/features/: __init__.py  feature_engineering.py
backend/app/services/: __init__.py  executive.py  fallback_model.py  forecasting.py  llm.py  overview.py
backend/app/training/: __init__.py  create_fallback_artifact.py  run_train_short.py  train_model.py
backend/configs/: model.yaml
backend/scripts/: call_summary.py  test_gemini.py  try_model_variants.py  try_more_variants.py  try_project_models.py
backend/src/: evaluate.py  features.py  ingest.py  predict.py  split.py  train.py  tune.py
dashboard/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/.next/: trace
dashboard/.next/cache/: config.json
dashboard/app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
dashboard/components/: Card.tsx  DashboardClient.tsx  ExecutivePulse.tsx  ForecastChart.tsx  ForecastDetails.tsx  HorizonSelector.tsx  KPI.tsx  ModelStatus.tsx  Navbar.tsx  OverviewPanel.tsx  SKUHealthPanel.tsx  SKUSelector.tsx  Sidebar.tsx  StorePerformance.tsx  SummaryPanel.tsx  TopBar.tsx  TrainButton.tsx
dashboard/lib/: api.ts
(+65 files in other folders)
